--- a/BTPaint.csproj
+++ b/BTPaint.csproj
@@ -133,6 +133,8 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Images\Nokk_001.jpg" />
+    <Content Include="Images\Nokk_Heroic.jpg" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
