--- a/BTPaint.csproj
+++ b/BTPaint.csproj
@@ -130,6 +130,12 @@
     <Compile Include="RasterCanvas.xaml.cs">
       <DependentUpon>RasterCanvas.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UserControls\Host.xaml.cs">
+      <DependentUpon>Host.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\Join.xaml.cs">
+      <DependentUpon>Join.xaml</DependentUpon>
+    </Compile>
     <Compile Include="WelcomePage.xaml.cs">
       <DependentUpon>WelcomePage.xaml</DependentUpon>
     </Compile>
@@ -165,6 +171,14 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="RasterCanvas.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\Host.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\Join.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
