--- a/BTPaint.csproj
+++ b/BTPaint.csproj
@@ -146,7 +146,7 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Assets\Icons\star.png" />
+    <Content Include="Assets\Icons\triangle.png" />
     <Content Include="Images\Nokk_001.jpg" />
     <Content Include="Images\Nokk_Heroic.jpg" />
     <Content Include="Assets\Icons\eraser.png" />
